--- a/CommandProcrastination/pom.xml
+++ b/CommandProcrastination/pom.xml
@@ -28,6 +28,9 @@
             <annotationProcessor>
               de.ialistannen.commandprocrastination.autodiscovery.processor.CommandCollectingAnnotationProcessor
             </annotationProcessor>
+            <annotationProcessor>
+              lombok.launch.AnnotationProcessorHider$AnnotationProcessor
+            </annotationProcessor>
           </annotationProcessors>
 
         </configuration>
@@ -57,6 +60,12 @@
       <groupId>de.ialistannen</groupId>
       <artifactId>CommandProcrastinationProcessor</artifactId>
       <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.8</version>
     </dependency>
 
     <dependency>
