--- a/CommandProcrastination/pom.xml
+++ b/CommandProcrastination/pom.xml
@@ -30,9 +30,6 @@
 
           <annotationProcessors>
             <annotationProcessor>
-              de.ialistannen.commandprocrastination.autodiscovery.processor.CommandCollectingAnnotationProcessor
-            </annotationProcessor>
-            <annotationProcessor>
               lombok.launch.AnnotationProcessorHider$AnnotationProcessor
             </annotationProcessor>
           </annotationProcessors>
@@ -76,15 +73,15 @@
 
   <dependencies>
     <dependency>
-      <groupId>de.ialistannen</groupId>
-      <artifactId>CommandProcrastinationProcessor</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-
-    <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>1.18.8</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.github.classgraph</groupId>
+      <artifactId>classgraph</artifactId>
+      <version>4.8.47</version>
     </dependency>
 
     <dependency>
