--- a/CommandProcrastination/pom.xml
+++ b/CommandProcrastination/pom.xml
@@ -10,6 +10,7 @@
   </parent>
 
   <artifactId>CommandProcrastination</artifactId>
+  <version>1.1-SNAPSHOT</version>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
